Attempt to fix problems with form scrolling and user not getting redirected to dashboard after navigate. Also to fix problem with logo icon not showing.

--- a/src/App.css
+++ b/src/App.css
@@ -117,17 +117,19 @@ h6 {
 
 /* Layouts */
 .center-wrapper {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
-    overflow: hidden; 
+    overflow-y: auto; /* Allow vertical scrolling only */
+    overflow-x: hidden; /* Prevent horizontal scrolling */
     display: flex; 
     flex-direction: column;
-    justify-content: space-between; 
+    justify-content: center; 
     align-items: center;
-    background-image: url(../public/images/pexels-joshsorenson-154147.jpg);
+    background-image: url(../images/pexels-joshsorenson-154147.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 35%;
+    background-attachment: fixed;
 
     .photo-byline {
     place-self: end;
